k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wio
  labels:
    app.kubernetes.io/part-of: wio
