k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wio-api
  namespace: wio
spec:
  selector:
    app: wio-api
  ports:
    - name: http
      port: 80
      targetPort: http
